2015-08-15  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/texi2any.pl (%formats_table): Use the right key name to 
	store module names for 'debugtree' and 'debugcount'.

2015-08-15  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/configure.ac: Convert backward 
	slashes to forward slashes in Perl's configuration values.

2015-08-15  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_parse_texi) <macro expansion>: If macro 
	expansion is empty, don't add to macro expansion stack.  Problem 
	with empty macro body, leading to error about recursive macro 
	usage, reported by Vincent Belaiche.

2015-08-15  Gavin Smith  <gavinsmith0123@gmail.com>

	* autogen.sh: Run libtoolize before autoreconf.

2015-08-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* makeinfo/README,
	* texi2html/README: Refer to directory containing texi2any 
	implementation.

2015-08-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info-utils.c (printed_representation): Remove code 
	looking at value of ISO_Latin_p, which doesn't do anything.  (It 
	hasn't done much since the display routines became locale-aware.)
	* info/terminal.c (ISO_Latin_p): Move declaration of variable to 
	this file.
	* info/info-stnd.texi (Variables) <ISO-Latin>: Update.

2015-08-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (Texinfo Mode): Move to an appendix.
	(Command Contexts): Make a top-level appendix.  Remove some 
	unnecessary words.
	(Command Syntax, Formatting Commands): Merge.  Distinguish 
	commands taking an argument on a line from commands starting a 
	block.  Also mention that there other exceptions than @refill, 
	like @tab.

2015-08-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (@ftable @vtable): Mention that @itemx as 
	well as @item creates an index entry.

2015-08-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/info-stnd.texi (Variables): Replace @table with @vtable 
	and remove @vindex lines.
